update env file name in task

--- a/tasks/copy_templates.yml
+++ b/tasks/copy_templates.yml
@@ -8,5 +8,5 @@
     group: docker
     mode: '0700'
   loop: 
-    - { template_name: db.env.j2, config_name: db.env }
+    - { template_name: env.j2, config_name: .env }
     - { template_name: docker-compose.yml.j2, config_name: docker-compose.yml }
