fix owner and group for dirs

--- a/tasks/create_directories.yml
+++ b/tasks/create_directories.yml
@@ -4,8 +4,8 @@
   file:
     path: "{{ nextcloud_basepath }}/{{ item }}"
     state: directory
-    owner: docker
-    group: docker
+    owner: www-data
+    group: www-data
     mode: '0700'
   loop:
     - nextcloud
