--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,11 +9,12 @@ nextcloud_db_root_password: change_me
 nextcloud_db_database: nextcloud
 nextcloud_db_user: nextcloud
 
+# needs to be 33 for www-data user/group, otherwise permission errors!
+nextcloud_cifs_uid: 33
+nextcloud_cifs_gid: 33
 nextcloud_cifs_share: data
 nextcloud_cifs_user: nextcloud
 nextcloud_cifs_pass: change_me
-nextcloud_cifs_uid: 1000
-nextcloud_cifs_gid: 1000
 
 nas_ip_address: 192.168.1.100
 
