--- a/tasks/create_directories.yml
+++ b/tasks/create_directories.yml
@@ -1,24 +1,22 @@
 ---
 
-- name: Create directories for bind volumes
+- name: Nextcloud - Create basepath.
   file:
-    path: "{{ nextcloud_basepath }}/{{ item }}"
+    path: "{{ nextcloud_basepath }}"
     state: directory
-    owner: www-data
-    group: root
+    owner: docker
+    group: docker
+    mode: '0700'
+
+- name: Nextcloud - Create directories for bind volumes.
+  file:
+    path: "{{ nextcloud_basepath }}/{{ item.name }}"
+    state: directory
+    owner: "{{ item.owner }}"
+    group: "{{ item.group }}"
     mode: '0700'
   loop:
-    - nextcloud
-    - apps
-    - config
-
-- name: Create directories for bind volumes
-  file:
-    path: "{{ nextcloud_basepath }}/{{ item }}"
-    state: directory
-    owner: 999
-    group: root
-    mode: '0700'
-  loop:
-    - db
-
+    - { name: nextcloud, onwer: www-data, group: root }
+    - { name: apps, onwer: www-data, group: root }
+    - { name: config, onwer: www-data, group: root }
+    - { name: db, owner: 999, group: root }
