--- a/tasks/copy_templates.yml
+++ b/tasks/copy_templates.yml
@@ -10,3 +10,4 @@
   loop: 
     - { template_name: env.j2, config_name: .env }
     - { template_name: docker-compose.yml.j2, config_name: docker-compose.yml }
+    - { template_name: create_db_dump.sh.j2, config_name: create_db_dump.sh }
